<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calendar</string>
    <string name="new_event_page_activity">New Event</string>
    <string name="action_settings">Settings</string>
    <string name="event_title_text">Title</string>
    <string name="start_date_picker_button">Choose Start Date</string>
    <string name="start_time_picker_button">Choose Start Time</string>
    <string name="end_date_picker_button">Choose End Date</string>
    <string name="end_time_picker_button">Choose End Time</string>
    <string name="location_field_text">Location</string>
    <string name="description_header_text">Description</string>
    <string name="attendees_button">Attendees</string>
    <string name="alert_button">Alert Time</string>
    <string name="recurrence_button">Recurrence</string>
    <string name="title_activity_calendar_month_view">Month View</string>
    <string name="title_activity_calendar_day_view">Day View</string>
    <string name="title_activity_calendar_week_view">Week View</string>
    <string name="save_button">Save</string>
    <string name="title_activity_event_list">Event List</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_event_item">Edit</string>
    <string name="title_activity_view_event_page">Event</string>
    <string name="enter_username">Enter a Username</string>
    <string name="delete_current_event">Delete</string>
    <string name="cancel_current_event">Cancel</string>
    <string name="current_attendees">Current Attendees</string>
    <string name="done_button">Done</string>
    <string name="delete_entry">Delete</string>
    <string name="logout">Logout</string>

</resources>
