<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <AutoCompleteTextView
        android:id="@+id/user_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username"
        android:inputType="none"
        android:singleLine="true" />
    
    <TextView 
        android:id="@+id/current_attendees_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_attendees"/>
    
    <ListView
        android:id="@+id/user_list"
        android:layout_width="match_parent"
        android:layout_height="300dp" />
    
    <Button
        android:id="@+id/save_attendees_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done_button"
        android:onClick="doneEditingAttendees"/>

</LinearLayout>
